; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kcpu.c_m68k_set_irq.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kcpu.c_m68k_set_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_INT_LEVEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_set_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @CPU_INT_LEVEL, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  %6 = shl i32 %5, 8
  store i32 %6, i32* @CPU_INT_LEVEL, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 1792
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @CPU_INT_LEVEL, align 4
  %11 = icmp eq i32 %10, 1792
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 @m68ki_exception_interrupt(i32 7)
  br label %16

14:                                               ; preds = %9, %1
  %15 = call i32 (...) @m68ki_check_interrupts()
  br label %16

16:                                               ; preds = %14, %12
  ret void
}

declare dso_local i32 @m68ki_exception_interrupt(i32) #1

declare dso_local i32 @m68ki_check_interrupts(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
